--- a/src/app/features/auth/pages/register-tenant/register-tenant.component.html
+++ b/src/app/features/auth/pages/register-tenant/register-tenant.component.html
@@ -19,13 +19,13 @@
             </div>
 
             <!-- Content Wrapper -->
-            <div class="relative z-10 w-full max-w-xl">
+            <div class="relative z-10 w-full max-w-md">
                 <h1 class="text-4xl font-extrabold text-indigo-900 mb-6 tracking-tight">Únete a la nueva era de la
                     facturación
                     electrónica.</h1>
                 <p class="text-lg text-gray-600 mb-8">Registra tu empresa en menos de 5 minutos y comienza a emitir
                     comprobantes autorizados por el SRI de forma fácil y segura.</p>
-                <img src="assets/images/auth-illustration.png" alt="Registro"
+                <img src="http://localhost:3000/uploads/register-invoice.png" alt="Registro"
                     class="w-full h-auto drop-shadow-2xl rounded-2xl">
             </div>
         </div>
